--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled",
+  "name": "new-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,51 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.2.3",
+    "@aws-sdk/client-dynamodb": "^3.496.0",
+    "@aws-sdk/client-lambda": "^3.600.0",
+    "@aws-sdk/client-s3": "^3.498.0",
+    "@aws-sdk/lib-dynamodb": "^3.496.0",
+    "@aws-sdk/lib-storage": "^3.509.0",
+    "@aws-sdk/s3-request-presigner": "^3.498.0",
+    "@mantine/charts": "^7.13.2",
+    "@mantine/core": "^7.13.2",
+    "@mantine/dates": "^7.13.2",
+    "@mantine/form": "^7.13.2",
+    "@mantine/hooks": "^7.13.2",
+    "@mantine/modals": "^7.13.2",
+    "@mantine/notifications": "^7.13.2",
+    "@tabler/icons-react": "^3.19.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.11",
+    "@types/next-pwa": "^5.6.4",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.13",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "file-type": "^19.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "next": "13.2.3",
+    "next-offline": "^5.0.5",
+    "next-pwa": "^5.6.0",
+    "next-with-workbox": "^3.0.5",
+    "node-fetch": "^3.3.1",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-qr-code": "^2.0.11",
+    "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
+    "swr": "^2.2.5",
+    "typescript": "4.9.5",
+    "workbox-window": "^7.0.0"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.47",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1"
   }
 }
