--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/hooks": "^7.13.2",
     "@mantine/modals": "^7.13.2",
     "@mantine/notifications": "^7.13.2",
+    "@redux-devtools/extension": "^3.3.0",
     "@tabler/icons-react": "^3.19.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.11",
@@ -49,7 +50,8 @@
     "sharp": "^0.33.5",
     "swr": "^2.2.5",
     "typescript": "4.9.5",
-    "workbox-window": "^7.0.0"
+    "workbox-window": "^7.0.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "postcss": "^8.4.47",
