--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.11",
     "@types/next-pwa": "^5.6.4",
-    "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
@@ -35,8 +34,10 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "file-type": "^19.0.0",
+    "idb": "^8.0.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.3",
     "next": "13.2.3",
     "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
@@ -54,8 +55,10 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1"
+    "postcss-simple-vars": "^7.0.1",
+    "prisma": "^5.21.0"
   }
 }
