adding prisma client and notification test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@/*": ["./src/*"]
     }
   },
+  "allowImportingExtensions": [".ts", ".tsx"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
