--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/hooks": "^7.13.2",
     "@mantine/modals": "^7.13.2",
     "@mantine/notifications": "^7.13.2",
+    "@prisma/client": "^6.1.0",
     "@redux-devtools/extension": "^3.3.0",
     "@tabler/icons-react": "^3.19.0",
     "@types/jsonwebtoken": "^9.0.2",
