--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,32 +10,30 @@
   "description": "Administracion de personal",
   "screenshots": [
     {
-      "src":"/screenshot_1.png",
+      "src": "/screenshot_1.png",
       "sizes": "2880x1800",
-      "type":"image/png"
+      "type": "image/png"
     }
   ],
   "icons": [
     {
-      "src": "/manifest-icon-192.maskable.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "/manifest-icon-192.maskable.png",
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-maskable-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/manifest-icon-512.maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/manifest-icon-512.maskable.png",
+      "src": "/icon-maskable-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
