--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "sharp": "^0.33.5",
     "swr": "^2.2.5",
     "typescript": "4.9.5",
+    "web-push": "^3.6.7",
     "workbox-window": "^7.0.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
+    "@types/web-push": "^3.6.4",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
