--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-qr-code": "^2.0.11",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.2.5",
     "typescript": "4.9.5",
     "workbox-window": "^7.0.0",
