--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/next-pwa": "^5.6.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-signature-canvas": "^1.0.7",
     "axios": "^1.4.0",
     "dayjs": "^1.11.13",
     "eslint": "8.35.0",
@@ -48,6 +49,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
