--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "@tabler/icons-react": "^3.19.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/leaflet": "^1.9.20",
     "@types/multer": "^1.4.11",
     "@types/next-pwa": "^5.6.4",
     "@types/react": "18.0.28",
@@ -38,6 +39,7 @@
     "file-type": "^19.0.0",
     "idb": "^8.0.1",
     "jsonwebtoken": "^9.0.1",
+    "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "next": "13.2.3",
