--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "bun --bun next dev",
+    "build": "bun --bun next build",
+    "start": "bun --bun next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.496.0",
     "@aws-sdk/client-lambda": "^3.600.0",
+    "@aws-sdk/client-location": "^3.864.0",
     "@aws-sdk/client-s3": "^3.498.0",
     "@aws-sdk/lib-dynamodb": "^3.496.0",
     "@aws-sdk/lib-storage": "^3.509.0",
     "@aws-sdk/s3-request-presigner": "^3.498.0",
+    "@googleapis/calendar": "^14.0.0",
     "@mantine/charts": "^7.13.2",
     "@mantine/core": "^7.13.2",
     "@mantine/dates": "^7.13.2",
@@ -23,8 +25,10 @@
     "@mantine/modals": "^7.13.2",
     "@mantine/notifications": "^7.13.2",
     "@prisma/client": "^6.1.0",
+    "@react-google-maps/api": "^2.20.7",
     "@redux-devtools/extension": "^3.3.0",
     "@tabler/icons-react": "^3.19.0",
+    "@turf/turf": "^7.2.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/leaflet": "^1.9.20",
     "@types/multer": "^1.4.11",
@@ -40,9 +44,10 @@
     "idb": "^8.0.1",
     "jsonwebtoken": "^9.0.1",
     "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.7.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
-    "next": "13.2.3",
+    "next": "15.4.7",
     "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
     "next-with-workbox": "^3.0.5",
