--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun --bun next build",
-    "start": "bun --bun next start",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -47,7 +47,7 @@
     "maplibre-gl": "^5.7.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
-    "next": "15.4.7",
+    "next": "16.0.3",
     "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
     "next-with-workbox": "^3.0.5",
@@ -61,7 +61,7 @@
     "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
     "swr": "^2.2.5",
-    "typescript": "4.9.5",
+    "typescript": "^5.9.3",
     "web-push": "^3.6.7",
     "workbox-window": "^7.0.0",
     "zustand": "^5.0.0-rc.2"
