--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@aws-sdk/lib-dynamodb": "^3.496.0",
     "@aws-sdk/lib-storage": "^3.509.0",
     "@aws-sdk/s3-request-presigner": "^3.498.0",
-    "@googleapis/calendar": "^14.0.0",
     "@mantine/charts": "^7.13.2",
     "@mantine/core": "^7.13.2",
     "@mantine/dates": "^7.13.2",
@@ -41,6 +40,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "file-type": "^19.0.0",
+    "googleapis": "^166.0.0",
     "idb": "^8.0.1",
     "jsonwebtoken": "^9.0.1",
     "leaflet": "^1.9.4",
